Modify index.html, index.css, and add the images for the buttons

--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <div class="header">Rock, Paper, Scissors, Lizard, Spock</div>
+    <div class="nav">
+        <span class="help"><a href="">?</a></span>
+        <span class="new-game"><a href="./index.html">New Game</a></span>
+    </div>
     
+    <div class="pentagram">
+        <svg viewBox="0 0 100 100">
+            <polygon points="50,1 98,38 78,91 22,91 2,38" fill="none" stroke="black"/>
+        </svg>
+        <div class="text-box" style="top: 50%; left: 50%;">Fill me Please!</div>
+        <button class="vertex" style="top: 2%; left: 50%;" title="Scissors"></button>
+        <button class="vertex" style="top: 38%; left: 98%;" title="Paper"></button>
+        <button class="vertex" style="top: 90%; left: 75%;" title="Rock"></button>
+        <button class="vertex" style="top: 90%; left: 25%;" title="Lizard"></button>
+        <button class="vertex" style="top: 38%; left: 2%;" title="Spock"></button>
+    </div>
+    <div class="footer">@TomNdPop</div>
 </body>
 </html>
+
