Add various links and scoreboard

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <script src="./index.js"></script>
+   
     <title>Document</title>
 </head>
 <body>
     <div class="header">Rock, Paper, Scissors, Lizard, Spock</div>
     <div class="nav">
-        <span class="help"><a href="">?</a></span>
+        <span class="help"><a href="https://www.youtube.com/watch?v=_PUEoDYpUyQ">?</a></span>
         <span class="new-game"><a href="./index.html">New Game</a></span>
     </div>
     
@@ -19,14 +19,16 @@
         <svg viewBox="0 0 100 100">
             <polygon points="50,1 98,38 78,91 22,91 2,38" fill="none" stroke="black"/>
         </svg>
-        <div class="text-box" style="top: 50%; left: 50%;">Fill me Please!</div>
+        <div class="text-box" style="top: 40%; left: 50%;">Fill me Please!</div>
+        <div class="text-box" style="top: 60%; left: 50%;">Score: <span class="yWin">0</span><span class="sep"> : </span><span class="cWin">0</span></div>
         <button class="vertex" style="top: 2%; left: 50%;" title="Scissors"></button>
         <button class="vertex" style="top: 38%; left: 98%;" title="Paper"></button>
         <button class="vertex" style="top: 90%; left: 75%;" title="Rock"></button>
         <button class="vertex" style="top: 90%; left: 25%;" title="Lizard"></button>
         <button class="vertex" style="top: 38%; left: 2%;" title="Spock"></button>
     </div>
-    <div class="footer">@TomNdPop</div>
+    <div class="footer"><a href="https://github.com/TomNdPop/rockPaperScissors">@TomNdPop</a></div>
+    <script src="./index.js" defer></script>
 </body>
 </html>
 
