Add newest filler to div

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <svg viewBox="0 0 100 100">
             <polygon points="50,1 98,38 78,91 22,91 2,38" fill="none" stroke="black"/>
         </svg>
-        <div class="text-box" style="top: 40%; left: 50%;">Fill me Please!</div>
+        <div class="text-box" style="top: 40%; left: 50%;">Pick one Please!</div>
         <div class="text-box" style="top: 60%; left: 50%;">Score: <span class="yWin">0</span><span class="sep"> : </span><span class="cWin">0</span></div>
         <button class="vertex" style="top: 2%; left: 50%;" title="Scissors"></button>
         <button class="vertex" style="top: 38%; left: 98%;" title="Paper"></button>
