--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
    
-    <title>Document</title>
+    <title>RPSLS</title>
 </head>
 <body>
     <div class="header">Rock, Paper, Scissors, Lizard, Spock</div>
