Add some style changes to the index.css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
         <button class="vertex" style="top: 90%; left: 25%;" title="Lizard"></button>
         <button class="vertex" style="top: 38%; left: 2%;" title="Spock"></button>
     </div>
-    <div class="footer"><a href="https://github.com/TomNdPop/rockPaperScissors">@TomNdPop</a></div>
+    <div class="footer"><a href="https://github.com/TomNdPop/rockPaperScissors">
+        <span class="rotate">@</span>
+        <span class="rotate">T</span>
+        <span class="rotate">o</span>
+        <span class="rotate">m</span>
+        <span class="rotate">N</span>
+        <span class="rotate">d</span>
+        <span class="rotate">P</span>
+        <span class="rotate">o</span>
+        <span class="rotate">p</span>
+    </a></div>
     <script src="./index.js" defer></script>
 </body>
 </html>
 
+ 
