--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">Rock, Paper, Scissors, Lizard, Spock</div>
     <div class="nav">
         <span class="help"><a href="https://www.youtube.com/watch?v=_PUEoDYpUyQ">?</a></span>
-        <span class="new-game"><a href="./index.html">New Game</a></span>
+        <span class="new-game"><a href="./index.html">New</a></span>
     </div>
     
     <div class="pentagram">
