--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
     </div>
     <div class="footer"><a href="https://github.com/TomNdPop/rockPaperScissors">
         <span class="rotate">@</span>
-        <span class="rotate">T</span>
-        <span class="rotate">o</span>
-        <span class="rotate">m</span>
-        <span class="rotate">N</span>
-        <span class="rotate">d</span>
-        <span class="rotate">P</span>
-        <span class="rotate">o</span>
-        <span class="rotate">p</span>
+        <span class="rotate">R</span>
+        <span class="rotate">y</span>
+        <span class="rotate">a</span>
+        <span class="rotate">n</span>
+        <span class="rotate">L</span>
+        
     </a></div>
     <script src="./index.js" defer></script>
 </body>
